<resources>
    <string name="language_english" translatable="false">English</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="string_zero" translatable="false">0</string>
    <string name="string_todo" translatable="false">TODO</string>
    <string name="string_ok" translatable="false">OK</string>
    <string name="receiver">Receiver: </string>
    <string name="sender">Sender: </string>
    <string name="avatar">Avatar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="str_menu_wallet">My wallet</string>
    <string name="msg_generic_error_message">Please try again in a moment.</string>
    <string name="hint_user_name">Account</string>
    <string name="password">password</string>
    <string name="txt_sign_in">Log in</string>
    <string name="str_logout">Log out</string>
    <string name="ms_user_name_not_empty">Username must not be blank.</string>
    <string name="ms_password_not_empty">Password can not be blank</string>
    <string name="str_ok">Agree</string>
    <string name="str_cancel">Abort</string>
    <string name="str_close">Closed</string>
    <string name="str_skip">Skip</string>
    <string name="str_done">Done</string>
    <string name="str_exit">Exit</string>
    <string name="str_continute">Continue</string>
    <string name="str_clear_filter">Refresh</string>
    <string name="str_delete_all_notification">You have deleted all notifications</string>
    <string name="str_confirm_delete_notification">Are you sure you want to delete all notifications</string>
    <string name="login_no_account">Do not have an account?</string>
    <string name="register_now">Register now!</string>
    <string name="str_register_account">Register</string>
    <string name="can_not_login">Forgot password</string>
    <string name="confirm">Confirm</string>
    <string name="re_pass">Enter the password</string>
    <string name="pass">Enter password</string>
    <string name="input_name">Enter your first and last name</string>
    <string name="input_stk">Enter an account</string>
    <string name="title_contact">Contact</string>
    <string name="title_history">History</string>
    <string name="title_wallet">My wallet</string>
    <string name="str_account_name">account name</string>
    <string name="str_ecash_id">eCash ID</string>
    <string name="str_account_balance">ECash balance</string>
    <string name="str_use_qr_code">Use QR Code</string>
    <string name="str_account_balance_edong">EDong balance</string>
    <string name="str_account_edong">EDong wallet</string>
    <string name="str_cash_in">eCash In</string>
    <string name="str_cash_out">eCash Out</string>
    <string name="str_change_cash">Change eCash</string>
    <string name="str_lixi">Lixi</string>
    <string name="str_transfer">Transfer Money</string>
    <string name="str_payment_service">Payment service</string>
    <string name="str_electron_pay">Payment of EVN</string>
    <string name="str_water_pay">Payment of water</string>
    <string name="str_shop_pay">Supermarket payment</string>
    <string name="str_cable_pay">VTVcab payment</string>
    <string name="str_help">Help</string>
    <string name="str_transfer_success">Successful transaction!</string>
    <string name="str_eCash_money_transfer_successfully">eCash money transfer successfully</string>
    <string name="str_chose_edong_account">Select Edong account</string>
    <string name="str_active_account_success">You have successfully activated your account</string>
    <string name="str_mess_logout">Do you want to leave this session?</string>
    <string name="str_balance_in_wallet">Balance in purse left</string>
    <string name="str_transfer_all_money">Please finalize your account before canceling your wallet</string>
    <string name="str_cancel_account_success">Account cancellation was successful</string>
    <string name="str_main_screen">Home screen</string>
    <string name="str_transactions_history_detail">Transaction details</string>
    <string name="str_history_human_code">Recipient Code:</string>
    <string name="str_history_name">Your Name:</string>
    <string name="str_history_phone">Phone number:</string>
    <string name="str_history_type">Species:</string>
    <string name="str_history_total">Total value:</string>
    <string name="str_history_content">Content:</string>
    <string name="str_history_date">Date:</string>
    <string name="str_time">Time</string>
    <string name="str_type_transfer">Transaction type</string>
    <string name="str_status">Status</string>
    <string name="str_add">Add new</string>
    <string name="str_sync_contact_success">Synchronizing contacts data successfully</string>
    <string name="str_edit">Repair</string>
    <string name="str_delete">Delete</string>
    <string name="str_wallet_number">Number of wallets</string>
    <string name="str_full_name">First and last name</string>
    <string name="str_mobile_info">Mobile info</string>
    <string name="str_update">Update</string>
    <string name="str_edt_search_empty">You have not entered a search keyword</string>
    <string name="str_input_add_contact">Enter phone number or wallet number</string>
    <string name="str_add_contact_success">Add new Contact successfully</string>
    <string name="str_confirm_delete">Are you sure you want to delete the wallet number?</string>
    <string name="str_my_qr_code">My QR code</string>
    <string name="str_scan_qr_code_to_add_wallet">Scan the QR code to add eWallet</string>
    <string name="str_save_to_device">Save to the machine</string>
    <string name="str_save_to_device_success">QR code has been saved to this device</string>
    <string name="str_chose_wallet_transfer">Select the number of wallets you want to transfer</string>
    <string name="str_forgot_password">Forgot password</string>
    <string name="str_input_user_name">Enter an account name</string>
    <string name="str_restore_pass">Password recovery</string>
    <string name="str_restore_pass_success">Password recovery success</string>
    <string name="str_send_again_code">Resend code</string>
    <string name="str_input_otp">Enter the OTP code</string>
    <string name="str_change_avatar">Change avatar</string>
    <string name="str_update_avatar_success">Change avatar successfully</string>
    <string name="str_edit_name">Full name</string>
    <string name="str_my_lixi">My lixi</string>
    <string name="str_lixi_open">Has opened</string>
    <string name="str_lixi_close">Not open yet</string>
    <string name="str_send_lixi">Send lixi</string>
    <string name="str_input_wish">Message wishes</string>
    <string name="str_change_cash_success">Change eCash successfully. Would you like to proceed with the transaction?</string>
    <string name="str_total_lixi">Total lixi</string>
    <string name="str_wishes">Wishes</string>
    <string name="str_take_lixi_success">you receive a pack of Poker, please open the Packet Pack</string>
    <string name="str_update_acount_info_success">Update account info success</string>
    <string name="str_open_camera">Please open the camera function to scan the QR code</string>
    <string name="str_lixi_sender">Lixi is sent from: %s</string>
    <string name="transfer_to_cash">Transfer to eCash account</string>
    <string name="transfer_to_account">Transfer to account</string>
    <string name="str_input_account_ecash">Enter your eCash account number</string>
    <string name="str_input_money">Enter the amount</string>
    <string name="str_input_content">Import content transfer money</string>
    <string name="str_input_cmnd">Enter your ID number</string>
    <string name="str_input_phone">Enter your phone number</string>
    <string name="str_account_receive">Accounts get</string>
    <string name="str_input_name_or_phone">Enter a name or phone number</string>
    <string name="str_item_transfer_cash"> %s  - %s </string>
    <string name="str_take_cash">Get eCash</string>
    <string name="str_cash_take_success">Success</string>
    <string name="str_fail">Failure</string>
    <string name="str_cash_take_info">Transaction information</string>
    <string name="str_human_transfer">Transporter:</string>
    <string name="str_phone_number_transfer">Phone number:</string>
    <string name="str_content_transfer">Content:</string>
    <string name="str_number_cash">Number of eCash</string>
    <string name="str_transfer_cash">Transfer eCash</string>
    <string name="str_input_transaction_search">Enter the search information</string>
    <string name="str_history_transfer">Transaction history</string>
    <string name="str_cash_have_in_wallet">Cash in the wallet</string>
    <string name="str_cash_change">Cash exchange</string>
    <string name="str_cash_take">Cash received</string>
    <string name="str_number_cash_transfer">The cash you want to change</string>
    <string name="str_number_cash_take">Cash transferred</string>
    <string name="str_withdraw_edong">Retract to eDong wallet</string>
    <string name="number_money">Amount of money</string>
    <string name="number_total_money_take">Total amount received</string>
    <string name="number_total_money_send">Total money exchange</string>
    <string name="str_number_recharge">Deposit amount</string>
    <string name="str_number_take">Amount received</string>
    <string name="str_number_out">Total Money: </string>
    <string name="str_number_in">Amount of withdrawal</string>
    <string name="str_phone_number">phone number</string>
    <string name="str_email">Email</string>
    <string name="str_cmnd">ID number</string>
    <string name="str_language">Language</string>
    <string name="str_address">Address</string>
    <string name="str_edit_info">Correct the information</string>
    <string name="str_dialog_cancel">Cancel</string>
    <string name="str_change_pass">Change Password</string>
    <string name="str_cancel_account">Account cancellation</string>
    <string name="str_logout_account">Logout account</string>
    <string name="str_register_finish">Completed</string>
    <string name="str_dialog_notification_title">Notification</string>
    <string name="str_Ignore">Ignore</string>
    <string name="yes">Agree</string>
    <string name="back">Back</string>
    <string name="str_confirm_out_app">Do you want to exit the application?</string>
    <string name="str_dialog_not_login">You are not logged in. Please login to use this function</string>
    <string name="str_dialog_active_acc">Please activate your account to use this function</string>
    <string name="str_input_old_pass">Enter the old password</string>
    <string name="str_input_new_pass">Enter your new password</string>
    <string name="str_input_re_new_pass">Enter a new password</string>
    <string name="str_chose_language_change">Select the language you want to change below</string>
    <string name="str_chose_image_from_store">Chose image from store</string>
    <string name="str_take_photo">Take photograp</string>
    <string name="str_total_payment_ecash">Total payment eCash</string>
    <string name="str_transaction_success">Successful transaction!</string>
    <string name="str_you_have_paid">You have paid</string>
    <string name="str_payment_info">Payment info</string>
    <string name="str_payment_content">Content</string>
    <string name="str_for_wallet_ecash">For eCash wallet account</string>
    <string name="str_permission_store_setting">You have chosen to not allow access to photos,memory. If you want to access your contacts again please enable access by going to Settings</string>
    <string name="str_setting">Settings</string>
</resources>