<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_gray"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/warning"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_cancel_account"
        android:textSize="@dimen/text_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_balance_in_wallet"
        android:textSize="@dimen/text_header" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/str_transfer_all_money"
        android:textSize="@dimen/text_header" />

    <Button
        android:id="@+id/btn_transfer_cash"
        android:layout_marginTop="30dp"
        android:text="@string/str_transfer_cash"
        android:textAllCaps="true"
        style="@style/btn_submit_full"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cash_out"
        android:layout_marginTop="10dp"
        android:text="@string/str_cash_out"
        android:textAllCaps="true"
        style="@style/btn_submit_full"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/str_cancel"
        android:textAllCaps="true"
        style="@style/btn_cancel"
        android:textStyle="bold" />
</LinearLayout>