<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_border_gray"
            android:elegantTextHeight="true"
            android:hint="@string/input_stk"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:textColor="@color/grey_light" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_border_gray"
            android:hint="@string/input_name"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:textColor="@color/grey_light" />

        <EditText
            android:id="@+id/edt_cmnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_border_gray"
            android:hint="@string/str_input_cmnd"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/grey_light" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_border_gray"
            android:hint="@string/str_input_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/grey_light" />

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_border_gray"
            android:hint="@string/pass"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/grey_light" />

        <EditText
            android:id="@+id/edt_re_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_border_gray"
            android:hint="@string/re_pass"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLength="20"
            android:textColor="@color/grey_light" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_border_rectangle_blue"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>