<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/bg_border_gray"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_avatar"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/str_language"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_header" />

    <Button
        android:id="@+id/btn_chose_store"
        android:layout_width="match_parent"
        style="@style/btn_submit"
        android:textSize="@dimen/text_large"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/str_chose_image_from_store" />
    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        style="@style/btn_submit"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_large"
        android:textAllCaps="true"
        android:text="@string/str_take_photo" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        style="@style/btn_cancel"
        android:textAllCaps="true"
        android:textSize="@dimen/text_large"
        android:text="@string/str_cancel" />

</LinearLayout>