<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_border_gray">

    <ImageView
        android:id="@+id/iv_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/str_logout"
        android:textColor="@color/black"
        android:textSize="@dimen/text_xlarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_mess_logout"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_ok"
            style="@style/btn_submit"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/text_large"
            android:text="@string/yes" />
        <Button
            android:id="@+id/btn_cancel"
            style="@style/btn_cancel"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/text_large"
            android:text="@string/str_Ignore" />

    </LinearLayout>


</LinearLayout>