<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:background="@drawable/bg_border_gray"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_payment_info"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_header"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_zero"
        android:textColor="@color/grey_light" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_total_payment_ecash"
            android:textColor="@color/grey_light" />
        <TextView
            android:id="@+id/tv_total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/string_zero"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_header"
            tools:ignore="RelativeOverlap,RtlSymmetry" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_payment_content"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_header"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@color/grey_light" />
    <Button
        android:id="@+id/btn_confirm"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        style="@style/btn_submit_full"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textSize="@dimen/text_header"
        />
</LinearLayout>
