<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/toolbar_login" />
    <EditText
        android:id="@+id/edt_old_pass"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/str_input_old_pass"
        android:maxLength="20"
        android:inputType="textPassword"
        android:textSize="@dimen/text_normal" />
    <TextView
        android:id="@+id/tv_error_old_pass"
        style="@style/TextViewErrorInput"
        android:text=""
        />

    <EditText
        android:id="@+id/edt_new_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/str_input_new_pass"
        android:inputType="textPassword"
        android:textSize="@dimen/text_normal" />
    <TextView
        android:id="@+id/tv_error_new_pass"
        style="@style/TextViewErrorInput"
        android:text=""
        />
    <EditText
        android:id="@+id/edt_re_new_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/str_input_re_new_pass"
        android:inputType="textPassword"
        android:textSize="@dimen/text_normal" />
    <TextView
        android:id="@+id/tv_error_re_new_pass"
        style="@style/TextViewErrorInput"
        android:text=""
        />
    <Button
        android:id="@+id/btn_confirm"
        style="@style/btn_submit_full"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/confirm"
        android:textStyle="bold" />
</LinearLayout>