<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_gray"
    android:layout_margin="10dp"
    android:padding="10dp"
    >
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:src="@drawable/ic_check_success"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_icon"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/str_transaction_success"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_header" />
    <TextView
        android:id="@+id/tv_you_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/str_you_have_paid"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large" />
    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_you_payment"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/string_zero"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large" />
    <TextView
        android:id="@+id/tv_to_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_amount"
        android:layout_centerHorizontal="true"
        android:text="@string/str_for_wallet_ecash"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large" />
    <TextView
        android:id="@+id/tv_ecash_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_to_account"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large" />
    <Button
        android:id="@+id/btn_main_screen"
        style="@style/btn_submit_full"
        android:text="@string/str_main_screen"
        android:textAllCaps="true"
        android:layout_below="@+id/tv_ecash_id"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_header"
         />
</RelativeLayout>
