<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/bg_border_gray"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_language"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/str_language"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_header" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:text="@string/str_chose_language_change"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large" />

    <Button
        android:id="@+id/btn_vietnam"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_large"
        android:text="@string/language_vietnamese"
        android:textColor="@color/gray"
        android:background="@drawable/bg_border_gray"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/btn_english"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/bg_border_rectangle_blue"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_large"
        android:text="@string/language_english" />

</LinearLayout>